--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,13 @@ click-repl==0.3.0
 cron-descriptor==1.4.0
 Django==3.2
 django-celery-beat==2.5.0
+django-filter==23.5
 django-timezone-field==6.1.0
+djangorestframework==3.14.0
 flower==2.0.1
 humanize==4.9.0
 kombu==5.3.4
+Markdown==3.5.1
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
