--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-celery-beat==2.5.0
 django-filter==23.5
 django-timezone-field==6.1.0
 djangorestframework==3.14.0
+Faker==21.0.0
 flower==2.0.1
 humanize==4.9.0
 kombu==5.3.4
