--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,12 @@ Markdown==3.5.1
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
+pypng==0.20220715.0
 python-crontab==3.0.0
 python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3.post1
+qrcode==7.4.2
 redis==5.0.1
 six==1.16.0
 sqlparse==0.4.4
