--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,14 @@ django-celery-beat==2.5.0
 django-filter==23.5
 django-timezone-field==6.1.0
 djangorestframework==3.14.0
+drf-yasg==1.21.7
 Faker==21.0.0
 flower==2.0.1
 humanize==4.9.0
+inflection==0.5.1
 kombu==5.3.4
 Markdown==3.5.1
+packaging==23.2
 prometheus-client==0.19.0
 prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
@@ -26,6 +29,7 @@ python-crontab==3.0.0
 python-dateutil==2.8.2
 python-decouple==3.8
 pytz==2023.3.post1
+PyYAML==6.0.1
 qrcode==7.4.2
 redis==5.0.1
 six==1.16.0
@@ -33,5 +37,6 @@ sqlparse==0.4.4
 tornado==6.4
 typing_extensions==4.9.0
 tzdata==2023.3
+uritemplate==4.1.1
 vine==5.1.0
 wcwidth==0.2.12
